src/test/deca/context/invalid/methods/param_decl_void.deca
// Description :
//    Paramètre de méthode déclaré de type void.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f(void x) {
        return 1;
    }
}

{
}

